fixing hidden input form fields for participant registration, switching from jquery setting the hidden experiment pk to django setting it dynamically in the views

--- a/vcweb/core/templates/experimenter/register-participants.html
+++ b/vcweb/core/templates/experimenter/register-participants.html
@@ -19,16 +19,7 @@
 {% include "includes/jquery.forms.html" %}
 <script type='text/javascript'>
     $(function() {
-            $('input:visible, textarea:visible').each(function(i, val) {
-                var labelTitle = $(val).prev().attr("title");
-                $(val).qtip({ content: labelTitle,
-                    position: { corner: {target: 'topRight', tooltip: 'bottomLeft'}},
-                    style: { name: 'cream', tip: 'bottomLeft'},
-                    show: { when: { event: 'mouseover focus'} },
-                    hide: { when: { event: 'mouseout blur' } }
-                    }
-                );
-            });
+        $('#vcweb-form').validate();
     });
 </script>
 {% endblock %}
