--- a/vcweb/forestry/templates/forestry/chat.html
+++ b/vcweb/forestry/templates/forestry/chat.html
@@ -1,76 +1,1 @@
-{% extends "participant/base.html" %}
-{% block title %}
-Communication Round: {{experiment}}
-{% endblock %}
-
-{% block page %}
-<h3 style='margin-top: -30px;'>Communication Round Instructions</h3>
-    <div class='alert alertIcon ui-corner-all' style='font-size: 0.8em; line-height: 1.0em;'>
-            You are <b>participant {{ participant_group_relationship.participant_number }}.</b>
-            You can chat about any aspect of the experiment with the other members of your group with two restrictions:
-            <ol style='margin-left: 15px;margin-bottom: 0;'>
-            <li>You cannot promise side payments after the experiment is completed 
-            <li>You cannot threaten any member of your group with any consequences after the experiment is completed
-            </ol>
-            We are monitoring the chat traffic and if we detect any violation
-            of these rules you will be removed from the experiment.
-        </b>
-    </div>
-    <div id='chat-div' class='chat notice ui-corner-all'>
-        {% for chat_message in chat_messages %}
-        <div class='ui-state-highlight'>
-            <a class='dark-yellow-highlight' name='{{chat_message.pk}}'>{{chat_message.date_created|date:"G:i:s"}}</a> | {{chat_message}}
-        </div>
-        {% endfor %}
-    </div>
-    <form id="chatform">
-        <input id='chatText' type="text" />
-        <div>
-            <button type='submit'>Send</button>
-        </div>
-    </form>
-{% endblock %}
-{% block javascript %}
-<script type="text/javascript">
-    $(function() {
-        var chatDiv = document.getElementById('chat-div');
-        var s = getCachedSocket();
-        s.on('message', function(json_string) {
-            var json = jQuery.parseJSON(json_string);
-            switch (json.message_type) {
-            case 'chat':
-                addChatMessage('chat-div', json);
-                /*
-                $("#chat-div").append(
-                    $("<div class='ui-state-highlight' />")
-                        .append($("<a />").attr("name", "" + json.pk)
-                            .text("" + json.date_created))
-                        .append(" | ")
-                        .append(json.message));
-                // scroll to bottom
-                scrollToBottom(chatDiv);
-                */
-                break;
-            case 'refresh':
-                location.reload(true);
-                break;
-            case 'goto':
-                location.href = json.url;
-                break;
-            }
-        });
-        //send the message when submit is clicked
-        $('#chatform').submit(function (evt) {
-            var line = $('#chatText').val()
-            if (line) {
-                $('#chatText').val('')
-                s.send(createMessageEvent(line));
-            }
-            return false;
-        });
-        $('#chatText').focus();
-        chatDiv.scrollTop = chatDiv.scrollHeight;
-    });
-</script>
-{% endblock %}
-
+{% extends "forms/chat.html" %}
