adding bootstrap popover

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -211,6 +211,7 @@
             });
         });
         $('#statusSpinner').hide();
+        $('#statusDiv [title]').tooltip(qtipOptions);
         $('#statusDiv').show('fast');
         $('#experimentData').show('fast');
         console.log("active round number: " + active_round_number);
@@ -227,7 +228,6 @@
         }
     }
     $(function() {
-        // FIXME: replace with knockout..
             var experimentMessageDiv = document.getElementById('experiment-messages');
             registerCallbacks({{ experiment.round_data_set.count }}, {{ experiment.current_round.sequence_number }});
             // websocket connection
