--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -109,8 +109,9 @@
             <br />
             </p>
             <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
+            <script type='text/javascript' src='{{STATIC_URL}}js/bootstrap-tooltip.js'></script>
+            <script type='text/javascript' src='{{STATIC_URL}}js/bootstrap-popover.js'></script>
             <script type='text/javascript' src='{{STATIC_URL}}js/knockout.min.js'></script>
-            <script type='text/javascript' src='{{STATIC_URL}}js/jquery.qtip-1.0.0-rc3.min.js'></script>
             <script type='text/javascript' src='{{STATIC_URL}}js/common.js'></script>
             {% include "includes/jquery.ui.html" %}
             {% if debug_mode %}
