--- a/vcweb/core/templates/includes/socket.io.html
+++ b/vcweb/core/templates/includes/socket.io.html
@@ -4,10 +4,9 @@
 </script>
 
 <script type="text/javascript">
-var vcwebSocket = {};
 var cachedSocket;
 var defaultPort = 8881;
-function connect(resource) {
+function connect(resource, onopen, onclose) {
     var host = window.location.hostname;
     if ( !host ) {
         console.log("Tried to connect to invalid host, connecting to vcweb.asu.edu instead.");
@@ -20,19 +19,22 @@ function connect(resource) {
     }
     console.log("Establishing connection to " + host + ":" + port + "/" + resource);
     cachedSocket = new io.Socket(host, {port: port, resource: resource});
-    cachedSocket.connect();
     console.log("connect invoked to " + host + ":" + port + "/" + resource);
-    cachedSocket.on('connect', function() {
-        console.debug("onconnect to " + host + ":" + port + "/" + resource);
-        cachedSocket.send(createConnectionEvent());
-    });
-    /*
-    cachedSocket.on('disconnect', function(data) {
-        console.log("received disconnect, reconnecting.");
-        cachedSocket.connect();
-        cachedSocket.send(createReconnectionEvent());
-    });
-    */
+    if (! onopen) {
+        onopen = function() {
+            console.debug("onconnect to " + host + ":" + port + "/" + resource);
+            cachedSocket.send(createConnectionEvent());
+        };
+    }
+    if (! onclose) {
+        onclose = function() {
+            console.log("disconnected");
+            cachedSocket = null;
+        };
+    }
+    cachedSocket.onopen = onopen;
+    cachedSocket.onclose = onclose;
+    cachedSocket.connect();
     return cachedSocket;
 }
 function getCachedSocket() {
