more work on sockjs client and server
- client messages need to be JSON.stringified
- decoding json in on_message

TODO: should consider moving to a single page model where new content is loaded into the content div via ajax and so we
don't need to constantly disconnect / reconnect the sockjs client.

--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -177,7 +177,7 @@
         else {
             if (json.should_transition) {
                 console.log("Transitioning participants to " + json.transition_url);
-                getCachedSocket().send(createGotoEvent(json.transition_url));
+                getWebSocket().send(createGotoEvent(json.transition_url));
             }
             $('#statusDiv').html(json.status);
             $('#experimentData').accordion("destroy");
