--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -53,6 +53,7 @@
 {% endif %}
 {% endblock content %}
 {% block javascript %}
+{{ block.super }}
 <script type="text/javascript">
     $(function() {
         $("#forestry-form").validate({
@@ -73,8 +74,8 @@
             this.select();
         });
         $('#harvest-decision-id').focus();
-        var s = getCachedSocket();
-        s.on('message', function(json_string) {
+        var s = connect();
+        s.onmessage = function(json_string) {
             var json = jQuery.parseJSON(json_string);
             switch (json.message_type) {
             case 'goto':
@@ -82,7 +83,7 @@
                 window.location.href = json.url;
                 break;
             }
-        });
+        };
         /*
         $('#forestry-form').submit(function() {
             var harvestDecisionValue = $('#harvest-decision-id').val();
