imported patch experimenterDashboard

--- a/vcweb/core/templates/experimenter/dashboard.html
+++ b/vcweb/core/templates/experimenter/dashboard.html
@@ -3,27 +3,27 @@
 {% block page %}
 {{ block.super }}
 <h3>Your experiments</h3>
-<div id="post">
+<div id="experiment-list">
     {% for e in experiments %}
     <div class='alert alert-message'>
         {{e.status_line}} 
         <span style='float:right; padding: 3px;' class='ui-state-highlight'><b>{{e.participant_set.count}} registered participants</b></span>
         <div class='btn-group'>
             <a class='btn' href='{{e.monitor_url}}'><img src='{{STATIC_URL}}images/famfamfam/zoom.png' alt='General experiment monitoring interface'/> monitor</a></li>
-            <a class='btn confirm-experiment-action' title='Creates a new copy of this experiment with the exact same configuration but no registered participants.'
+            <a class='btn confirm-experiment-action' data-content='Creates a new copy of this experiment with the exact same configuration but no registered participants.'
                 href='{{e.clone_url}}'><img src='{{STATIC_URL}}images/famfamfam/page_copy.png' alt='Clone experiment'/> clone</a>
             {% if e.participant_set.count == 0  %}
-            <a class='btn' title='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'><img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants</a>
-            <a title='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' 
+            <a class='btn' data-content='Register participants for this experiment with actual email addresses' href='{{e.controller_url}}/register-email-list'><img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> register participants</a>
+            <a data-content='Register participants for this experiment with fake email addresses by providing an email suffix and the number of participants.' 
                 class='btn' href='{{e.controller_url}}/register-simple'>
                 <img src='{{STATIC_URL}}images/famfamfam/group_add.png' alt='register'/> test participants</a>
             {% else %}
-            <a title='clear all participants' href='{{e.controller_url}}/clear-participants' class='btn confirm-experiment-action'><img src='{{STATIC_URL}}images/famfamfam/group_delete.png' alt=''/> clear all participants</a></li>
+            <a data-content='Remove all participants from the experiment, including any data they may have generated.' href='{{e.controller_url}}/clear-participants' class='btn confirm-experiment-action'><img src='{{STATIC_URL}}images/famfamfam/group_delete.png' alt=''/> clear all participants</a></li>
             {% endif %}
             {% if e.is_active %}
-            <a title='stop this experiment' href='{{e.stop_url}}' class='btn confirm-experiment-action'><img src='{{STATIC_URL}}images/famfamfam/stop.png' alt=''/> stop</a>
+            <a data-content='stop this experiment' href='{{e.stop_url}}' class='btn confirm-experiment-action'><img src='{{STATIC_URL}}images/famfamfam/stop.png' alt=''/> stop</a>
             {% else %}
-            <a class='btn' title='Configure this experiment (sanitation)' href='{{e.configure_url}}'><img src='{{STATIC_URL}}images/famfamfam/wrench.png' alt='configure' /> configure</a>
+            <a class='btn' data-content='Configure this experiment (sanitation)' href='{{e.configure_url}}'><img src='{{STATIC_URL}}images/famfamfam/wrench.png' alt='configure' /> configure</a>
             {% endif %}
         </div>
     </div>
@@ -38,12 +38,12 @@
 {{ block.super }}
 <script type='text/javascript'>
     $(function() {
-        $('.confirm-experiment-action').each(function() {
+        $('.confirm-experiment-action', $('#experiment-list')).each(function() {
             var confirmable = $(this);
-            var description = confirmable.attr("title");
+            var description = confirmable.attr("data-content");
             confirmable.click(function() {
                 confirmable.fastConfirm({
-                    questionText: description + " - continue?",
+                    questionText: description + "  Continue?",
                     onProceed: function(trigger) {
                         $(trigger).fastConfirm('close');
                         window.location = $(trigger).attr("href");
