--- a/vcweb/core/templates/experimenter/monitor.html
+++ b/vcweb/core/templates/experimenter/monitor.html
@@ -5,40 +5,38 @@
 {% block page %}
 {{block.super}}
 <h3>{{experiment}}</h3>
-<span>You are logged in as {{request.user.experimenter}}.</span>
-<hr/>
-<div id='experimenter-sidebar'>
-    <h5>Activity Log</h5>
-    <div id='experiment-messages' class='experimenter-sidebar-messages notice ui-corner-all'>
-        {% for group in experiment.groups.all %}
-            {% for activity_log in group.current_round_activity_log %}
-            <div style='font-size: 0.75em; line-height: 1.0em;padding:3px;' class='ui-state-highlight'>
-                {{activity_log}}
-            </div>
+<div class='row-fluid'>
+    <div class='span6'>
+        <ul class='nav nav-list'>
+            <li class='nav-header'>Experiment management</li>
+            <li><a href='javascript:void()' id='refreshAllParticipants' data-content='Sends a page refresh to all connected participants.' >
+                <span class='vcweb-icon ui-icon icon-left' style='background:url({{STATIC_URL}}images/famfamfam/arrow_refresh.png);'></span>
+                refresh all participants</a>
+            </li>
+            <li><a href='javascript:void()' id='transitionAllParticipants' data-content='Moves all connected participants from waiting page to active page.' >
+                <span class='vcweb-icon ui-icon icon-left' style='background:url({{STATIC_URL}}images/famfamfam/arrow_right.png);'></span>
+                transition all participants to next round</a>
+            </li>
+            <li class='nav-header'>Download Data</li>
+            <li><a href='download/csv'><img src='{{STATIC_URL}}images/famfamfam/page_white_text.png' style='margin: 5px 0 0 0;' alt='' />csv</a></li>
+            <li><a href='download/xls'><img src='{{STATIC_URL}}images/famfamfam/page_white_excel.png' style='margin: 5px 0 0 0;' alt=''/>xls</a><li>
+        </ul>
+    </div>
+    <div class='span6'>
+        <h5>Activity Log</h5>
+        <div id='experiment-messages' class='alert alert-message'>
+            {% for group in experiment.groups.all %}
+                {% for activity_log in group.current_round_activity_log %}
+                <div style='font-size: 0.75em; line-height: 1.0em;padding:3px;' class='ui-state-highlight'>
+                    {{activity_log}}
+                </div>
+                {% endfor %}
+            {% empty %}
+                No activity yet.
             {% endfor %}
-        {% endfor %}
+        </div>
     </div>
 </div>
-<fieldset class='small ui-corner-all'>
-    <legend>Experiment management</legend>
-    <ul class='actions'>
-        <li><span id='refreshAllParticipants' data-content='Sends a page refresh to all connected participants.' class='clickable' >
-            <span class='vcweb-icon ui-icon icon-left' style='background:url({{STATIC_URL}}images/famfamfam/arrow_refresh.png);'></span>
-            refresh all participants</span>
-        </li>
-        <li><span id='transitionAllParticipants' data-content='Moves all connected participants from waiting page to active page.' class='clickable' >
-            <span class='vcweb-icon ui-icon icon-left' style='background:url({{STATIC_URL}}images/famfamfam/arrow_right.png);'></span>
-            transition all participants to next round</span>
-        </li>
-        <li>
-        <a href='download/csv'>
-            <span class='vcweb-icon ui-icon icon-left' style='margin: 8px 0.15em 0px 0px; background:url({{STATIC_URL}}images/download-icon.png);'></span>
-            download data as <img src='{{STATIC_URL}}images/famfamfam/page_white_text.png' style='margin: 5px 0 0 0;' alt='' /> csv
-        </a> |
-        <a href='download/xls'><img src='{{STATIC_URL}}images/famfamfam/page_white_excel.png' style='margin: 5px 0 0 0;' alt=''/> xls</a>
-        </li>
-    </ul>
-</fieldset>
 <div class='experiment-dashboard'>
     {% comment %}
     FIXME: Improve this so that we can just inject a new round_configuration
