--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -12,123 +12,123 @@
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        {% block head %}
-        <title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.css">
-        <link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap-responsive.css">
-        <!--
+<head>
+{% block head %}
+<title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap.css">
+<link rel="stylesheet" href="{{STATIC_URL}}bootstrap/css/bootstrap-responsive.css">
+<!--
         <link rel="stylesheet" href="{{STATIC_URL}}css/blueprint/screen.css" type="text/css" media="screen, projection" />
         <link rel="stylesheet" href="{{STATIC_URL}}css/blueprint/print.css" type="text/css" media="print" />
         -->
-        <!--[if lt IE 8]><link rel="stylesheet" href="{{STATIC_URL}}media/css/blueprint/ie.css" type="text/css" media="screen, projection" /><![endif]-->
-        <link href="{{STATIC_URL}}css/guarantee/style.css" rel="stylesheet" type="text/css" media="screen" />
-        <link href="{{STATIC_URL}}css/style.css" rel="stylesheet" type="text/css" media="screen" />
-        <!-- vcweb common js -->
+<!--[if lt IE 8]><link rel="stylesheet" href="{{STATIC_URL}}media/css/blueprint/ie.css" type="text/css" media="screen, projection" /><![endif]-->
+<!--<link href="{{STATIC_URL}}css/guarantee/style.css" rel="stylesheet" type="text/css" media="screen" />-->
+<link href="{{STATIC_URL}}css/style.css" rel="stylesheet" type="text/css" media="screen" />
+{% endblock %}
+</head>
+<body>
+<div id='header'>
+    {% block header %}
+    <div class='navbar navbar-fixed-top'>
+        <div class='navbar-inner'>
+            <div class='container'>
+                <ul class='nav'>
+                    {% block headerlinks %}
+                    <li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
+                    <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
+                    <li class='{% active request contact %}'><a href='{{ contact }}'>Contact us</a></li>
+                    <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'>Report a Bug</a></li>
+                    {% if request.user.is_authenticated %}
+                    <li class='{% active request logout %}'><a href='{{ logout }}'>Logout</a></li>
+                    {% else %}
+                    <li class='{% active request login %} {% active request register %}'>
+                    {% if debug_mode %}
+                    <a href='{{ login }}'>Login/Register</a>
+                    {% else %}
+                    <a href='https://{{request.get_host}}{{ login }}'>Login/Register</a>
+                    {% endif %}
+                    </li>
+                    {% endif %}
+                    {% endblock %}
+                </ul>
+            </div>
+        </div>
+    </div>
+    {% endblock %}
+</div>
+<div id='logo'>
+    <div style='clear:none; position:relative;float:right; left:-930px; padding: 5px;'>
+        <img src='{{STATIC_URL}}images/vcweb-logo.png' alt='vcweb logo'/>
+    </div>
+    <h1>
+        {% block logo %}
+        virtual commons web environment
         {% endblock %}
-    </head>
-    <body>
-        <div id='header'>
-            {% block header %}
-            <div class='navbar navbar-fixed-top'>
-                <div class='navbar-inner'>
-                    <div class='container'>
-                        <ul class='nav'>
-                            {% block headerlinks %}
-                            <li class='{% active request home %}' ><a href='{{ home }}' class='first'>Home</a></li>
-                            <li class='{% active_re request dashboard %}'><a href='{{ dashboard }}'>Dashboard</a></li>
-                            <li class='{% active request contact %}'><a href='{{ contact }}'>Contact us</a></li>
-                            <li><a href='https://bitbucket.org/virtualcommons/vcweb/issues'>Report a Bug</a></li>
-                            {% if request.user.is_authenticated %}
-                            <li class='{% active request logout %}'><a href='{{ logout }}'>Logout</a></li>
-                            {% else %}
-                            <li class='{% active request login %} {% active request register %}'>
-                            {% if debug_mode %}
-                            <a href='{{ login }}'>Login/Register</a>
-                            {% else %}
-                            <a href='https://{{request.get_host}}{{ login }}'>Login/Register</a>
-                            {% endif %}
-                            </li>
-                            {% endif %}
-                            {% endblock %}
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            {% endblock %}
+    </h1>
+</div>
+<div class='container'>
+    <noscript>
+        <div class='alert alertIcon ui-corner-all'>
+            Please <b>enable JavaScript</b> before using this site.  <br/>Our experiments are interactive and
+            <b>will not function properly</b> without JavaScript.
         </div>
-        <div id='logo'>
-            <div style='clear:none; position:relative;float:right; left:-930px; padding: 5px;'>
-                <img src='{{STATIC_URL}}images/vcweb-logo.png' alt='vcweb logo'/>
-            </div>
-            <h1>
-                {% block logo %}
-                virtual commons web environment
-                {% endblock %}
-            </h1>
-        </div>
-        <div class='container-fluid'>
-            <noscript>
-                <div class='alert alertIcon ui-corner-all'>
-                    Please <b>enable JavaScript</b> before using this site.  <br/>Our experiments are interactive and
-                    <b>will not function properly</b> without JavaScript.
-                </div>
-            </noscript>
-            {% if messages %}
-            <h3>Messages</h3>
-            {% for message in messages %}
-            <div class='alert'>
-                <button class='close' data-dismiss='alert'>x</button>
-                {{message}}
-            </div>
-            {% endfor %}
-            {% endif %}
-            {% block page %}
-            <div id="content">
-                {% block content %}
+    </noscript>
+    {% if messages %}
+    <h3>Messages</h3>
+    {% for message in messages %}
+    <div class='alert'>
+        <button class='close' data-dismiss='alert'>x</button>
+        {{message}}
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% block page %}
+    <div id="content">
+        {% block content %}
 
-                {% endblock content %}
-            </div>
-            <div id='sidebar'>
-                {% block sidebar %}
-                {% endblock sidebar %}
-            </div>
-            {% endblock page %}
-            <div style='clear: both;'>&nbsp;</div>
-            <!--  end #page -->
-        </div>
-        <div id="footer">
-            {% block footer %}
-            <p>
-            <a href='http://shesc.asu.edu'>School of Human Evolution and Social Change</a> <br />
-            <a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>
-            </p>
-            <p class='legal'>
-            Copyright (c) {% now "Y" %} Arizona Board of Regents.  <br/>
-            <br />
-            </p>
-            <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
-            <script type='text/javascript' src='{{STATIC_URL}}js/bootstrap-tooltip.js'></script>
-            <script type='text/javascript' src='{{STATIC_URL}}js/bootstrap-popover.js'></script>
-            <script type='text/javascript' src='{{STATIC_URL}}js/knockout.min.js'></script>
-            <script type='text/javascript' src='{{STATIC_URL}}js/common.js'></script>
-            {% include "includes/jquery.ui.html" %}
-            {% if debug_mode %}
-                {% load dajaxice_templatetags %}
-                {% dajaxice_js_import %}
-            {% else %}
-                <script type='text/javascript' src='{{STATIC_URL}}js/dajaxice.core.js' charset='utf-8'></script>
-            {% endif %}
-            <script type='text/javascript'>
-                <!-- sets all external links to open up in new windows and jquery-ui buttonifies all buttons-->
-                $(function() {
-                    $('a.external').attr({ target: "_blank" });
-                });
-            </script>
-            {% block javascript %}
-            {% endblock %}
-            {% endblock footer %}
-        </div>
-    </body>
+        {% endblock content %}
+    </div>
+    <div id='sidebar'>
+        {% block sidebar %}
+        {% endblock sidebar %}
+    </div>
+    {% endblock page %}
+    <div style='clear: both;'>&nbsp;</div>
+    <!--  end #page -->
+</div>
+<div id='footer'>
+    <footer class="footer">
+        {% block footer %}
+        <p>
+        <a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a><br/>
+        <a href='http://shesc.asu.edu'>School of Human Evolution and Social Change</a> 
+        </p>
+        <p class='legal'>
+        Copyright (c) {% now "Y" %} Arizona Board of Regents.  <br/>
+        <br />
+        </p>
+        <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js'></script>
+        <script type='text/javascript' src='{{STATIC_URL}}js/bootstrap-tooltip.js'></script>
+        <script type='text/javascript' src='{{STATIC_URL}}js/bootstrap-popover.js'></script>
+        <script type='text/javascript' src='{{STATIC_URL}}js/knockout.min.js'></script>
+        <script type='text/javascript' src='{{STATIC_URL}}js/common.js'></script>
+        {% include "includes/jquery.ui.html" %}
+        {% if debug_mode %}
+        {% load dajaxice_templatetags %}
+        {% dajaxice_js_import %}
+        {% else %}
+        <script type='text/javascript' src='{{STATIC_URL}}js/dajaxice.core.js' charset='utf-8'></script>
+        {% endif %}
+        <script type='text/javascript'>
+$(function() {
+    $('a.external').attr({ target: "_blank" });
+});
+        </script>
+        {% block javascript %}
+        {% endblock %}
+        {% endblock footer %}
+    </footer>
+</div>
+</body>
 </html>
